revise a post and add a post
revise:
TIOJ1387 / 1407 多重背包問題 (tag)
add:
二分圖筆記

--- a/source/_posts/TIOJ1387-1407-多重背包問題.md
+++ b/source/_posts/TIOJ1387-1407-多重背包問題.md
@@ -4,6 +4,8 @@ date: 2019-02-11 12:44:16
 category: TIOJ
 tags:
 - TIOJ
+- dp
+- 背包dp
 ---
 https://tioj.ck.tp.edu.tw/problems/1387
 https://tioj.ck.tp.edu.tw/problems/1407
