add 2 posts and revise a post
revise:
最大點-邊獨立集-最小點-邊覆蓋-最大團-相關性統整-1
add:
最大點-邊獨立集-最小點-邊覆蓋-最大團-相關性統整-2-二分圖
uva11478 Halum (差分約束)

--- a/source/_posts/最大點-邊獨立集-最小點-邊覆蓋-最大團-相關性統整-1.md
+++ b/source/_posts/最大點-邊獨立集-最小點-邊覆蓋-最大團-相關性統整-1.md
@@ -9,7 +9,7 @@ tags:
 
 先把幾個問題列出來。
 1. 最大獨立集：是一張圖中，最多有幾個點互不相鄰的最大集合。
-2. 最大匹配：為圖上最大的邊集使得每個點至多和一條邊相鄰。
+2. 最大匹配：為圖上最大的邊集使得每個點至多和一條邊相鄰(又稱最大獨立邊集)。
 3. 最小點覆蓋：最小的點集使得圖上每條邊都至少與點集中一個點相鄰。
 4. 最小邊覆蓋：最小的邊集使得圖上每個點都至少與邊集中一條邊相鄰。
 5. 最大團：一個最大的子圖使得圖中每兩點皆有一條邊連接(完全圖)。
