--- a/source/_posts/ICPC-2019.md
+++ b/source/_posts/ICPC-2019.md
@@ -9,7 +9,7 @@ date: 2019-11-25 14:21:51
 這次 ICPC 前我幾乎沒時間練習，只有在前一個禮拜打了模擬賽，那場手感還不錯。上次得 52 名，這次的目標我設定為銀牌。
 
 這次比賽場地在北商大，之前是商專，校園小小的。
-
+<!-- more -->
 第一天報到，拿衣服的時候跟我們說 S 號沒了???於是給我們 M 號。到了會場裡，就聽開場，然後測試，測試的題目是 TOPC 題，就沒有想要破台。晚上拿了一盒餐盒回去。
 
 第二天因為處理報到的速度太慢，延後了 15 分鐘。
