--- a/source/_posts/NCPC-2019-決賽.md
+++ b/source/_posts/NCPC-2019-決賽.md
@@ -7,7 +7,7 @@ abbrlink: 52a9
 date: 2019-10-19 22:30:21
 ---
 今天是NCPC決賽，今天我沒有很早去會場，當我到的時候，我的隊友都已經到，早上測試賽也只有做簡單測試而已，中午吃飯的時候在聽電神們在聊天，下午就是正式比賽。
-
+<!-- more -->
 前面花了一些時間在設定 .vimrc 。
 
 我先看PA，有想法，做出來不對，於是趕快換題。
