--- a/source/_posts/zjc264_神奇的載物任務.md
+++ b/source/_posts/zjc264_神奇的載物任務.md
@@ -9,6 +9,7 @@ date: 2018-04-15 20:18:01
 ---
 連結:https://zerojudge.tw/ShowProblem?problemid=c264
 題意:要在大貨車上放貨物，但有重量和力矩限制，問你最大價值為多少
+<!-- more -->
 這題顯然是背包問題，重量限制也很常見，可是"力矩"卻是很罕見了。
 力矩:為長度乘以重量，所以越重的物體放越前面(長度越短)越好，所以先排序一遍。
 而我dp兩個維度為重量和力矩，看在當重量及力矩長度下最大的價值。
