--- a/source/_posts/二分圖筆記.md
+++ b/source/_posts/二分圖筆記.md
@@ -7,7 +7,7 @@ abbrlink: 263f
 date: 2019-02-12 14:47:36
 ---
 今天我研究了二分圖，整理了以下兩件事。
-
+<!-- more -->
 第一個是二分圖判定，有兩種方式可以判斷一張"連通圖"是否為二分圖。一個是DFS或BFS，首先把一個點標記為1，那麼與它相鄰的點都要標示為-1，當遍歷到-1的點，就要把它相鄰的點標記為1，以此類推，如果發現有不合規定的，那麼就不是二分圖了。第二種方式是用並查集，相鄰的點為兩個不同陣營，用並查集維護這件事情，如果遇到矛盾，那麼就不是二分圖了。
 
 第二個是二分圖的性質，先講幾個圖論中常遇見的問題。
