--- a/source/_posts/台中-社團經營.md
+++ b/source/_posts/台中-社團經營.md
@@ -6,7 +6,7 @@ category: 隨筆
 tags:
 ---
 週六有機會去參加一個社團經營的課程，到了高鐵台中站，我們查 Google Map 說還要走路 30 分鐘，我們覺得太誇張，於是開定位自己走，結果5分鐘就到了(根本沒跑出建築物外)。
-
+<!-- more -->
 早上第一堂課讓我們分析社團的目標、客群、合作關係...等性質為何。讓我們知道自己的社團應該走向何處。第二堂課教我們如何分配任務，要建立故事，執行者才會更加明白要求；將大任務切成小事項才足以行動，成果取決於"價值"；判決是否完整，獨立、可修改、有價值；善用任務管理軟體。
 
 下午的課則是 HITCON GIRL 來分享經驗，第一堂課我最記得的是如何寫贊助書，第二堂課則是在分享如何經營一個社團，包含招募、傳承講師培育等問題，聽完這些我也有一些自己的想法，但還需要整理。
