--- a/source/_posts/最大點-邊獨立集-最小點-邊覆蓋-最大團-相關性統整-1.md
+++ b/source/_posts/最大點-邊獨立集-最小點-邊覆蓋-最大團-相關性統整-1.md
@@ -7,7 +7,7 @@ abbrlink: '1456'
 date: 2019-02-13 11:01:32
 ---
 昨天有提到一些問題在二分圖上有特殊的性質，其實那些性質在一般圖只有一個是沒有，這幾天就來做統整和簡單說明怎麼找出答案。
-
+<!-- more -->
 先把幾個問題列出來。
 1. 最大獨立集：是一張圖中，最多有幾個點互不相鄰的最大集合。
 2. 最大匹配：為圖上最大的邊集使得每個點至多和一條邊相鄰(又稱最大獨立邊集)。
