--- a/source/_posts/最大點-邊獨立集-最小點-邊覆蓋-最大團-相關性統整-2-二分圖.md
+++ b/source/_posts/最大點-邊獨立集-最小點-邊覆蓋-最大團-相關性統整-2-二分圖.md
@@ -7,7 +7,7 @@ abbrlink: 8c1d
 date: 2019-02-14 19:41:20
 ---
 今天再來說明一次二分圖上有特殊的性質，今天主要會講如何找出這些問題的一組解。
-
+<!-- more -->
 同樣先列出問題：
 1. 最大獨立集：是一張圖中，最多有幾個點互不相鄰的最大集合。
 2. 最大匹配：為圖上最大的邊集使得每個點至多和一條邊相鄰(又稱最大獨立邊集)。
