--- a/source/_posts/資料生成心得.md
+++ b/source/_posts/資料生成心得.md
@@ -9,7 +9,7 @@ abbrlink: '27e6'
 date: 2020-01-21 23:38:40
 ---
 大學三上的重頭戲非資料庫專題莫屬，我是負責後端的部分，總共分成兩部分，資料生成和 django，今天來講第一部分。
-
+<!-- more -->
 我們專題的資料是從 Codeforces 上爬下來，在整理到 MySQL 上，過程中我都是用 python 實作。
 
 首先要用 bs4 來把資料抓下來，這部分就是先到網站上看網頁的架構，再來就是要如何儲存，我是用 json 當作資料格式，過程中遇到的問題是 tag 可能會有很多個，所以要再多包一層，所以我的 json 會看到由多層 `[]` 包起來的資料。我一開始是用自己的電腦抓資料，後來發現這樣我必須一直開電腦，所以我改用學校提供的虛擬機跑，搭配 tmux 的多視窗同時跑(為了節省時間)，既方便看起來也很舒壓。
