--- a/source/_posts/NCPU-2019-系列0-模擬賽.md
+++ b/source/_posts/NCPU-2019-系列0-模擬賽.md
@@ -7,6 +7,7 @@ abbrlink: fb76
 date: 2019-07-23 10:03:20
 ---
 去年ICPC Taipei RC就決定今年NCPU是在台南長榮大學比，所以我就很期待可以比賽前住宿一天，然後我和幾個同學也決定多留一天，就變成三天兩夜比賽+旅遊的行程。
+<!-- more -->
 把時間轉到今年五月，是NCPU報名時間，我很希望輔大能有很多隊伍參加，去年是8隊，我的目標大概是想要成長到11,12隊，結果不知道是大家都對程式比賽有強烈興趣，還是想要去台南玩，最後竟然有17隊報名!!!原本只預定一輛遊覽車坐不下，導致有些人+老師要另外搭高鐵南下比賽。
 之後我把各隊隊伍統計結果PO在FB，IOI國手Brian Tsai跟我說還少算4隊，一開始以為是2!的人要來打，後來才知道是國手群要當模擬賽。
 為了有好成績，老師特別在暑假舉辦兩場模擬賽(週六)，用比賽的環境模擬，因為要參加Web營隊，所以沒辦法刷太多題目，模擬賽對我而言，是個很好的機會練習手感。
