--- a/source/_posts/TIOJ1387-1407-多重背包問題.md
+++ b/source/_posts/TIOJ1387-1407-多重背包問題.md
@@ -10,8 +10,8 @@ date: 2019-02-11 12:44:16
 ---
 https://tioj.ck.tp.edu.tw/problems/1387
 https://tioj.ck.tp.edu.tw/problems/1407
-這兩題是多包問題，1307測資範圍比較鬆，可以用O(NTC)的做法試試，1407就要用單調隊列優化來AC(複雜度為O(NT))。我在解1407時，因為deque放迴圈，所以吃了TLE，後來才想到要放迴圈外面，我原本是想讓它自動clear，沒想到要付出時間代價。
-
+這兩題是多重背包問題，1307測資範圍比較鬆，可以用O(NTC)的做法試試，1407就要用單調隊列優化來AC(複雜度為O(NT))。我在解1407時，因為deque放迴圈，所以吃了TLE，後來才想到要放迴圈外面，我原本是想讓它自動clear，沒想到要付出時間代價。
+<!-- more -->
 附上TIOJ1407的code
 {% codeblock lang:cpp %}
 #include <bits/stdc++.h>
