--- a/source/_posts/2019-Week-33-被遊戲及影片耽誤.md
+++ b/source/_posts/2019-Week-33-被遊戲及影片耽誤.md
@@ -9,7 +9,7 @@ abbrlink: ae72
 date: 2019-08-19 22:00:29
 ---
 這周AC的題目是0題(不含ITSA月賽)，原因有外出、兩天在研究Travis CI、寫NISRA Enlightened，還有一點是一直以來都在存在的："遊戲及影片"。
-
+<!-- more -->
 * [ITSA月賽](https://allem40306.github.io/blog/2019/08/20/ITSA73/)
 
 這是月賽改成雙月制的第二場比賽，我直到7點才記起來要比XD，最後的成績是(6/9)，成績還可以，只不過怎麼ITSA月賽題目越來越多了。
