--- a/source/_posts/2019-Week-34-出題目.md
+++ b/source/_posts/2019-Week-34-出題目.md
@@ -7,7 +7,7 @@ abbrlink: 93fd
 date: 2019-08-26 11:32:25
 ---
 這周我的重心不在寫題目，而在出題目，每年開學都有校內的學科競賽要比，要趕在9月份前出完題目，至於後續發展就等校內賽比完再說。
-
+<!-- more -->
 還有一個重心是學React，Redux我還不太懂，React Route較熟一些，離精熟React還有一大段路。
 
 這周我還去了基隆，海科館和基隆夜市，早上但瑞芳時，平溪深澳線的火車還誤點，於是等了一小時的火車，海科館的互動滿多的。接下來搭火車去基隆火車站，吃了紅燒鰻羹、山豬肉漢堡，最後從基隆新火車站搭車回家，算是不錯的一天。
