--- a/source/_posts/2019-Week-41-國慶連假.md
+++ b/source/_posts/2019-Week-41-國慶連假.md
@@ -6,7 +6,7 @@ date: 2019-10-14 16:20:15
 tags:
 ---
 這個禮拜國慶連假，上課三天沒有什麼太特別的事，唯一一件是在週一社課利用Vjudge來為一甲一乙建立橋梁(?，希望兩班程式都能很強，然後來打程式競賽(O。
-
+<!-- more -->
 過慶四天基本上都在家裡，除了一天在比NCPC的二模(這樣寫感覺很猛)，幾乎都是程式競賽課的題目，我就挑題來寫，有好幾隊都當去荊軻寫秦始皇題了。
 
 國慶連假最想去新光三越吧，有寶可夢集換式卡牌活動，看了youtube的影片，讓我也想入坑了。
