--- a/source/_posts/2019-Week-44-期中考前一週.md
+++ b/source/_posts/2019-Week-44-期中考前一週.md
@@ -6,7 +6,7 @@ date: 2019-11-04 09:55:14
 tags:
 ---
 這週主要是在準備期中考，一如以往，我用 HackMD 來做筆記，漸漸地能夠駕馭這次考試的內容，我之後可能會分享我的讀書方法。
-
+<!-- more -->
 週三差點累壞了，早上資料庫，中午要幫忙監考補考，下午原本還有助教課，但那門課後來變成自由選擇要不要去，所以輕鬆了許多。
 
 最後是校外專案的部分，我花了一大部分學習怎麼寫，漸漸地感受到前端工程師的生活了。
