--- a/source/_posts/2019-Week-48-忙碌的一週.md
+++ b/source/_posts/2019-Week-48-忙碌的一週.md
@@ -6,5 +6,5 @@ date: 2019-12-02 09:14:43
 tags:
 ---
 這週基本上都在趕東西，原本以為機率與統計沒有作業，結果出了QQ，還有資料沒給好，又多花了一點時間，幸好把比較近期的東西給弄好了。
-
+<!-- more -->
 週三吃兩攤，分別是中午班聚和晚上競賽社團團聚，尤其晚上的餐點特別豐盛，滿足了我的味蕾。
