--- a/source/_posts/2019-Week-49-校慶.md
+++ b/source/_posts/2019-Week-49-校慶.md
@@ -7,7 +7,7 @@ abbrlink: 10c
 date: 2019-12-10 09:26:15
 ---
 這週我把許多作業都完成了，資料庫專題要把資料匯進去了，心情放鬆許多。
-
+<!-- more -->
 週三拿到上次比賽獎勵，藍芽耳機，滿不錯用的。
 
 週六校慶我還是來寫作業，中間跑去聽聲林之王第二季的選手陳央唱歌，人蠻風趣的，然後又跑去系友會了。
