--- a/source/_posts/2019-Week-51-暫時輕鬆的一個禮拜.md
+++ b/source/_posts/2019-Week-51-暫時輕鬆的一個禮拜.md
@@ -6,9 +6,9 @@ date: 2019-12-23 09:26:38
 tags:
 ---
 我發現校外專案我是應付不來了，所以果斷退出，這次的經驗讓我學到很多事情，也讓我了解到我適合在什麼環境，希望下次做事能有更好的執行力。
-
+<!-- more -->
 禮拜三看了很多奇妙的事情，我真的覺得態度和積極是在資訊領域界是很重要的事情，沒有這些特質，根本寫不出 code 來。
 
-週六去當 hour of code 的助教，覺得有些小朋友的邏輯能力其實不錯，希望這次活動能在他們心中種下小小種子。
+週六去當 [hour of code](../de63) 的助教，覺得有些小朋友的邏輯能力其實不錯，希望這次活動能在他們心中種下小小種子。
 
 這個禮拜有時間看了很多影片，覺得生活品質恢復正常了，接下來要趕快把作業做出來，再來準備期末考和明年的競賽。
