--- a/source/_posts/2020-Week-01-新的一年-先被雷.md
+++ b/source/_posts/2020-Week-01-新的一年-先被雷.md
@@ -6,7 +6,7 @@ date: 2020-01-07 23:15:45
 tags:
 ---
 先祝大家新年快樂。
-
+<!-- more -->
 這禮拜把作業都趕出來，剩下的就是期末考(雖然寫的當下剩兩科而已)，整個輕鬆好多。
 
 可是新年開始，某一堂課就算錯成績，把大家心情搞得很差，接下來還有考試，不要讓我們有壓力好嗎?
