--- a/source/_posts/2020-Week-02-期末考.md
+++ b/source/_posts/2020-Week-02-期末考.md
@@ -6,7 +6,7 @@ date: 2020-01-13 22:42:27
 tags:
 ---
 這週當然是好好考期末考，另外還有資料庫專題發表，還有助教的部分。
-
+<!-- more -->
 期末考這次有兩科計算很多，一科憑記憶，一科靠翻書，大概就這樣。
 
 資料庫專題發表週三下午，我們大部分時間都是在等待，也沒有特別緊張，最後競賽成績出來也沒有很大的得失心，一開始就沒打算要做出很猛的東西了。
