--- a/source/_posts/TOPC-2019.md
+++ b/source/_posts/TOPC-2019.md
@@ -5,4 +5,6 @@ tags: TOPC
 abbrlink: b78e
 date: 2019-10-05 22:29:08
 ---
-今天早上在比TOPC，我們就對了3題，題目內容就不多說了，我覺得接下來NCPC要拚一下，才能保住去年得24名甚至更好，繼續拚吧！
+今天早上在比TOPC，我們就對了3題，題目內容就不多說了。
+<!-- more -->
+我覺得接下來NCPC要拚一下，才能保住去年得24名甚至更好，繼續拚吧！
