--- a/source/_posts/寒訓心得文系列-3-雜事.md
+++ b/source/_posts/寒訓心得文系列-3-雜事.md
@@ -6,4 +6,6 @@ tags:
 abbrlink: bbe4
 date: 2019-01-24 22:01:15
 ---
-一個營隊除了課程內容，當然還有其他事要忙，簽到、訂午餐......，這些在前幾天當然沒什麼大不了，不過最後一天下午因為要辦比賽，所以要買pizza當晚餐，但是比賽時只有兩種人，比賽的人+監考的人，所以沒有人能幫忙，只到最後我和學長才去買，過程真的很費力氣。再來比賽也是前兩天突然決定，導致出題者辛苦。最後是押金，因為一開始沒訂好遊戲規則，導致原本想要扣押某些人的押金，卻因為理由站不住腳所以放棄，以上這些事讓我覺得我在綠光學的東西沒有好好利用，下次要好好計畫好才行。
+一個營隊除了課程內容，當然還有其他事要忙，簽到、訂午餐......，這些在前幾天當然沒什麼大不了，不過最後一天下午因為要辦比賽，所以要買pizza當晚餐，但是比賽時只有兩種人，比賽的人+監考的人，所以沒有人能幫忙，只到最後我和學長才去買，過程真的很費力氣。再來比賽也是前兩天突然決定，導致出題者辛苦。
+<!-- more -->
+最後是押金，因為一開始沒訂好遊戲規則，導致原本想要扣押某些人的押金，卻因為理由站不住腳所以放棄，以上這些事讓我覺得我在綠光學的東西沒有好好利用，下次要好好計畫好才行。
