--- a/source/_posts/寒訓心得文系列-5-人.md
+++ b/source/_posts/寒訓心得文系列-5-人.md
@@ -7,7 +7,7 @@ abbrlink: f2
 date: 2019-01-25 10:16:25
 ---
 系列最後一篇文，我想要感謝幫助這個營隊的人。
-
+<!-- more -->
 首先是老師和助教，協助我關於教室和經費、題目的來源、還有比賽的獎品，這樣的後盾讓我能更專注在講課上。再來是跟我一起講課及協助一些雜事的人，尤其是講課這一方面，如果沒人幫我講課，我就沒時間能夠寫完講義了!!!
 
 最後當然要感謝來聽課的同學，已開始我預設只有15位左右，最後多了一倍，有30位，而且出席率算高的，看到這樣，就覺得辦這次營隊是對的。
