--- a/source/_posts/隨筆1-小心自定義的比較運算子.md
+++ b/source/_posts/隨筆1-小心自定義的比較運算子.md
@@ -8,6 +8,7 @@ abbrlink: '5802'
 date: 2017-12-17 21:18:37
 ---
 這是發生在我打PTC的例子。
+<!-- more -->
 我自己定義<運算子，結果本地編譯器給過，但PC^2都是CE。
 這是我CE的一小段程式碼
 {% codeblock lang:cpp %}
