--- a/source/_posts/2019-Week-36-程式競賽暑訓周.md
+++ b/source/_posts/2019-Week-36-程式競賽暑訓周.md
@@ -6,7 +6,7 @@ date: 2019-09-25 09:30:55
 tags:
 ---
 這一整週都在參加暑訓程式營，相關的文章[請點這裡](../tags/FJU-Summer-2019/)。
-
+<!-- more -->
 然後周三有和系主任開會，因為他說要給系上社團一個空間，改天有空也會發文。
 
 最後要說的是CPC的宣傳，周三有新生茶會，周五有新生訓練，幾乎都是前一兩天才做的，講的也不差，就希望正式社課人來多一點。
