--- a/source/_posts/2019-Week-40-我不是小潘潘.md
+++ b/source/_posts/2019-Week-40-我不是小潘潘.md
@@ -7,7 +7,7 @@ tags:
 - TOPC
 ---
 這周依然是有比賽的一周，但隊伍方面，只能我現在還沒養成小潘潘(統一獅球探)的能力，下次組隊要更謹慎才對。至於比賽方面，周三NCPC模擬賽，週四檢討，周六TOPC，NCPC模擬賽做了三題，但隔天聽完檢討以後發現我至少可以解6題。週六的比賽跟去年比品質好很多，我們做對3題，排名約在30左右，第四題想法對了，可是想太複雜沒做出來QAQ。
-
+<!-- more -->
 這週大一程式設計課很準時的在7:30結束了，一個原因是剛好斷網XD。大二程式設計課，則要改作業，我算是滿認真的，看來很多人都怕怕的，好幾個人的程式想讓我做梗圖。
 
 這週就紀錄到這了。
