--- a/source/_posts/2019-Week-43-情緒多變的一週.md
+++ b/source/_posts/2019-Week-43-情緒多變的一週.md
@@ -7,7 +7,7 @@ abbrlink: 1d2e
 date: 2019-10-28 22:01:27
 ---
 這禮拜的某一天讓我很生氣，我從那件事得到啟發，請別人做事時要從心理尊重別人，並以和善的口氣和對方溝通，還有做事要挑對人。
-
+<!-- more -->
 這週分別再不同專題上開會，一場像是在欣賞陡峭的山壁，一場則是在規劃前端的東西，兩個專題都有小小的前進一點，繼續加油。
 
 說到專題，我在建資料庫server發生一件趣事，我以為要開防火牆然後把連結DB的port 1433打開後，登出ssh，下一次我要再登入時發現自己將ssh連線擋住，所以只能重灌QQ，幸好第二次比較熟練了，很快就裝好了。
