--- a/source/_posts/2019-Week-52-歡樂的一週.md
+++ b/source/_posts/2019-Week-52-歡樂的一週.md
@@ -6,7 +6,7 @@ date: 2019-12-30 09:50:29
 tags:
 ---
 禮拜一和禮拜二是尾牙模式，先吃燒烤吃披薩，還玩了 Switch，他的大富翁很鬧，最後給的意想不到的大結局。
-
+<!-- more -->
 週三聖誕節放假，在家看影片打遊戲，只把機率與統計筆記做完。
 
 接下來有把類神經和電腦圖學的報告做好，還有把熊熊遇見你的聖誕節活動破完。
