--- a/source/_posts/寒訓心得文系列-2 講課.md
+++ b/source/_posts/寒訓心得文系列-2 講課.md
@@ -7,5 +7,5 @@ abbrlink: c7dd
 date: 2019-01-23 20:34:36
 ---
 關於講課，這部分我需要慢慢練習，雖然上學期的社課已經交了很多次，但這次在講課還是會一直吃螺絲，會有贅字產生，我想避掉都失敗，要改善這種情況，我想講課前要更熟悉課程，多多演習內容，才能講得更順暢。
-
+<!-- more -->
 看看下學期的行事曆，我想先在就要開始準備下學期的內容了，因為有很多課程，是我不熟或是想突破自己而放上的，拖到過年後準備，只會讓品質不佳，也沒辦法改善關於講課的內容。
