--- a/source/_posts/2020-Week-05-交大營隊取消-QQ.md
+++ b/source/_posts/2020-Week-05-交大營隊取消-QQ.md
@@ -8,7 +8,7 @@ tags:
   - FJU Winter 2020
 ---
 這週這最讓我難過的事，是交大的營隊因武漢肺炎影響取消了，超失望的，要是在告訴我要好好準備校內寒訓，希望不要被迫取消(汗，還有取消訂房可以免押金。
-
+<!-- more -->
 這幾天我都在打寒訓的廣告，第一次不小心加很多好友被暫時 ban 掉，之後我都小心慢慢加，但現在人數卡住了，希望多點人來參加。
 
 最後一件是想記錄的是武漢肺炎，這幾天限購口罩，有買了一些預備用，但其是很好奇到底要準備多少口罩才足夠，剛剛最新新聞是說高中以下延後兩周開學，大學明天討論，不過我覺得應該差不多也是會統一延後了。
