--- a/source/_posts/最近狀況.md
+++ b/source/_posts/最近狀況.md
@@ -7,4 +7,4 @@ tags:
 ---
 已經三個月沒寫blog，暑假一開始就忙到現在，主要在學校的Web營隊還有準備NCPU(台南三日遊)。
 <!-- more -->
-接下來我會寫有關這兩件事情的文章，以及下下禮拜開始的清大程式競賽訓練營，這三個系列文都會陸續出現，不過NCPU比賽心得文會先出來。
+接下來我會寫有關這兩件事情的文章，以及下下禮拜開始的清大程式競賽訓練營，這三個系列文都會陸續出現，不過NCPU程式營隊和大賽文會先出來。
