--- a/source/_posts/2020-Week-08-狀態不錯.md
+++ b/source/_posts/2020-Week-08-狀態不錯.md
@@ -7,7 +7,7 @@ tags:
   - FJU Winter 2020
 ---
 也許是為了準備寒訓的課程，這週寫了很多題目，包含一場 Atcoder，而且狀況不錯，未來希望能一週打 2, 3 場比賽。
-
+<!-- more -->
 再來是寒訓，進階班的人數已達到我的預期，但是基礎班卻只有 3, 4 個左右，希望最後能有 10 個以上。
 
 最後紀錄這週的國中同學會，我遇到老師和三個很久沒見面的人，其中一個變化很大，差點就認不出來了owo。
