--- a/source/_posts/TIOJ1236-工廠生產問題.md
+++ b/source/_posts/TIOJ1236-工廠生產問題.md
@@ -8,7 +8,7 @@ tags:
 - flow
 ---
 題目連結：https://tioj.ck.tp.edu.tw/problems/1236
-題意：工廠有很多機器，有些機器會利用原料(或是半成品)產出半成品，隔天給其他機器繼續產出，最終會有機器產出成品，問一天最高的產能為多少。
+題意：工廠有很多機器，有些機器會利用原料(或是半成品)產出半成品，接著當天給其他機器繼續產出，最終會有機器產出成品，每台機器有各自的產能上限(以天為單位)，問一天最高的產能為多少。
 <!-- more -->
 解法：這題是需要拆點的最大流，把每個機器拆成兩點 $x_{in}$ 和 $x_{out}$，拿源點連接原料生產的機器，拿產出最後成品的機器連結匯點，對於有上下流關係的兩個機器，將上流的 $out$ 點，連到下流的 $in$ 點，然後跑最大流就能得出答案。這是我又用成無向圖吃了 WA，我對圖是有向圖或是無向圖的判斷需要精準一點。
 
