--- a/source/_posts/2020-Week-11-組隊.md
+++ b/source/_posts/2020-Week-11-組隊.md
@@ -7,7 +7,7 @@ tags:
 ---
 
 這週一的 CPC 來了很多人，應該是課程形式改變奏效，希望期末還能看到這些人。
-
+<!-- more -->
 這學期的客我打算都用共筆來進行筆記，剛剛在 VSCode 下載 HackMD 套件，來應付網路不穩的時候。
 
 這週打不到一場完整的比賽，主要是變忙而且花太多時間在娛樂上面了，看看之後要不要用番茄鐘來管理時間。
