--- a/source/_posts/2020-Week-10-開學第一週.md
+++ b/source/_posts/2020-Week-10-開學第一週.md
@@ -6,7 +6,7 @@ category: 週記
 tags:
 ---
 這禮拜開學第一週基本上都是在介紹課程，但還是有幾門課可以記錄，第一就是機器學習，大三只有兩個人選，而且專題看起來需要很多心力去做，是一門很硬的課。通識腦科學與生活老師講課很有趣，是一門可以學到東西的好課。然後聽說資訊安全還不錯，加上同時間我的助教課不需要考試，所以我就加選了一門，這學期看起來有點危險。
-
+<!-- more -->
 這週我連續打了 Atcoder Beginner Contest 156 和 157，算是有達到我的目標，不過一直都沒打 Codeforces 有點不對勁。
 
 最後來談 CPC 的事情，整理寒訓的東西，發出會後信，也確定了這學期社課的方向，希望這次能社課有穩定的人數，暑假的 NCPU 直接報名 $\frac{3}{5}$ 啦！
