--- a/source/_posts/2020-Week-12-要遠端教學嗎.md
+++ b/source/_posts/2020-Week-12-要遠端教學嗎.md
@@ -6,7 +6,7 @@ category: 週記
 tags:
 ---
 這個禮拜終於將一場 codeforces 解決掉了，只能說 codeforces 需要很多心力去想題目，下禮拜預計會打一場吧。
-
+<!-- more -->
 我這禮拜變得很雷，一直弄壞事情XDD。
 
 這禮拜疫情升溫，境外移入很多例，輔大正在討論要不要遠端教學，我自己覺得可以採部分遠端，讓教室給比較需要實作的項目，總之還是希望疫情能夠趨緩啦！
