--- a/source/_posts/2020-Week-15-中職開打.md
+++ b/source/_posts/2020-Week-15-中職開打.md
@@ -8,7 +8,9 @@ tags:
 ---
 決定開始用 toggl，可以來回顧這禮拜在做什麼。
 <!-- more -->
-這星期主要花太多時間在機器學習 Lab 1 上，約 8 小時，一開始我用上學期類神經的作業改，後來發現有些不一樣，加上有 bug，之後要先看完作業需求再做會減少花費時間。我發現我花在娛樂的時間太多了，大約一天的時間，而當中有半天都在玩卡通農場，而一半的娛樂時間都在週末，但學業方面的也是週末花最多時間，基本上就是娛樂和學業交替。其他的時間還沒完全記錄下來，我應該要把上課時間和睡眠時間也一併紀錄，才能使資料更完整。
+這星期學業花的時間依序為：機器學習(8 hr 40 min)、編譯器(4 hr)、網路安全(2 hr 20 min)。主要花太多時間在機器學習 Lab 1 上，約 8 小時，除了週五和週日其他天都在做，一開始我用上學期類神經的作業改，後來發現有些不一樣，加上有 bug，之後要先看完作業需求再做會減少花費時間。還有數值方法和人生哲學的報告要做，要加把勁。
+
+我發現我花在娛樂的時間太多了，大約一天的時間，而當中有半天都在玩卡通農場，而一半的娛樂時間都在週末，但學業方面的也是週末花最多時間，基本上就是娛樂和學業交替。其他的時間還沒完全記錄下來，我應該要把上課時間和睡眠時間也一併紀錄，才能使資料更完整。
 
 這週打了 AtCoder Beginner Contest 160，花了 4 小時，整題難度並不算太高。
 
