--- a/source/_posts/2020-Week-18-充實的寫作業時間.md
+++ b/source/_posts/2020-Week-18-充實的寫作業時間.md
@@ -6,7 +6,7 @@ category: 週記
 tags:
 ---
 這週一到四都在期中考，考的狀況算普通，實際要等成績公布才知道，考完繼續趕編譯器作業。最後我在這週花了大約 26 小時 40 分鐘的時間寫完，一部份是因為作業真的很多，一部份是因為我自己看錯題目，才會那麼久。不過寫完算是放下心中的一塊大石頭。
-
+<!-- more -->
 這週的精力都花在課業上，間接導致從事娛樂的的時間變少(47 小時變成 32 小時)，接下來要好好把 Youtube 的影片看一下，堆了很多部沒看了。
 
 再來應該繼續寫程式競賽的東西，還有經營部落格，最重要的還有畢業專題要弄哪!
