--- a/source/_posts/2020-Week-25-機器學習專題.md
+++ b/source/_posts/2020-Week-25-機器學習專題.md
@@ -4,6 +4,7 @@ abbrlink: 323e
 date: 2020-06-27 23:15:10
 category: 週記
 tags:
+- NCPU
 ---
 這週忙於期末考，最緊張的應該是機器學習的專題，都還在研究階段，週日才安裝好環境，開始寫 code，安裝的時候才開始深刻明白 python 的底層是 C++ 這件事情，最後安裝花了我六小時才裝完，真是一大工夫。
 <!-- more -->
