--- a/source/_posts/NCPU-2020-系列3-這次主辦方.md
+++ b/source/_posts/NCPU-2020-系列3-這次主辦方.md
@@ -7,7 +7,7 @@ tags:
   - NCPU
   - 欸
 ---
-這次主辦方的情況我之前有在 hackmd 上先寫了一篇，[文章請點此](https://hackmd.io/Mir3MpnhQ067svoLnJktKQ?view)。我在這裡上再發一篇完整的。
+這次主辦方的情況我之前有在 hackmd 上先寫了一篇，[文章請點此](https://hackmd.io/Mir3MpnhQ067svoLnJktKQ?view)。我在這裡上再發一篇比較沒那麼好聽的的。
 <!-- more -->
 5 月那時候，我就有再注意 NCPU 官網怎沒還沒出來，那時候都是在 ICPC 官網上面查詢，結果 5 月 20 那一週先被我找到 nCtu 的官網，確定比賽日期，後來才找到 NCPU 官網，找到官網看到的是一個漏洞百出的網站，上面的模板都還清楚的留著。之後看了很多次官網，上面的資訊沒有一次是正確的，我提前就預知這場比賽的品質不是很好。
 
