--- a/source/_posts/積性函數.md
+++ b/source/_posts/積性函數.md
@@ -6,8 +6,7 @@ category: 隨筆
 tags:
 - math
 ---
-[維基
-百科](https://zh.wikipedia.org/wiki/%E7%A9%8D%E6%80%A7%E5%87%BD%E6%95%B8)
+[維基百科](https://zh.wikipedia.org/wiki/%E7%A9%8D%E6%80%A7%E5%87%BD%E6%95%B8)
 <!-- more -->
 * 定義：對於一個定義域在正整數的函數 $f(n)$，當 $a$ 和 $b$ 互質時 $f(ab)=f(a)f(b)$
 * 例子 1：歐拉函數 $\phi(n)$
