--- a/source/_posts/2020-Week-31-豐富的題目.md
+++ b/source/_posts/2020-Week-31-豐富的題目.md
@@ -9,4 +9,6 @@ tags:
 <!-- more -->
 我除了在寫選修課的題目，還有 ICPC 訓練聯盟一個禮拜兩次模擬賽，要寫真的寫不完，不過這個聯盟真是好，看看效果怎麼樣，我想推薦給其他人。
 
+這禮拜二有位學長把他要進入台大 ICPC 培訓班，初選(?)的題目，我發現都是一些資奧培訓的題目，我發現我可以在 ICPC 前寫這些題目。 
+
 做專題的時間依然在 6 小時左右，看來要制定每週目標，或是思考一下哪些時間要優化，不然要開始準備研究所還有開學的事情了，事情消化不完。
