--- a/source/_posts/2020-Week-31-豐富的題目.md
+++ b/source/_posts/2020-Week-31-豐富的題目.md
@@ -2,7 +2,7 @@
 title: '[2020 Week 31] 豐富的題目'
 abbrlink: de9b
 date: 2020-08-03 20:46:14
-category:
+category: 週記
 tags:
 ---
 這週花在更多時間寫程式競賽的題目了。平均一天超過 4 小時。
