--- a/source/_posts/2020-Week-32-狂開共筆.md
+++ b/source/_posts/2020-Week-32-狂開共筆.md
@@ -2,7 +2,7 @@
 title: '[2020 Week 32] 狂開共筆'
 abbrlink: 46a5
 date: 2020-08-10 16:46:26
-category:
+category: 週記
 tags:
 ---
 這個禮拜程式競賽訓練都在寫有關 ICPC 訓練聯盟的題目，比較深刻的題目是平衡樹(樹堆 Treap)，Treap 的變化滿多的，如果到時候真的要帶 Treap 要整理一下。
