--- a/source/_posts/POJ1664-放苹果.md
+++ b/source/_posts/POJ1664-放苹果.md
@@ -6,6 +6,7 @@ category: POJ
 tags:
   - POJ
   - 遞迴
+  - ICPC 亞洲訓練聯盟暑訓 2020
 ---
 [題目連結](http://poj.org/problem?id=1664)
 * 題意：把 $M$ 个同樣的蘋果放在 $N$ 个同樣的盤子里，允許有的盤子空着不放，問共有多少種不同的分法？($1\leq N,M \leq 10$)(1 1 5 和 1 5 1 視為一種)。
