--- a/source/_posts/2020-Week-38-看棒球.md
+++ b/source/_posts/2020-Week-38-看棒球.md
@@ -8,4 +8,6 @@ tags:
 ---
 週六我去看了棒球，一開始統一是落後的，但 9 局來個大逆轉，最後獲勝，爽。兩次全壘打都剛好打到我附近，近距離看到全壘打球滿過癮的。
 <!-- more -->
-上週準備程式競賽的時間減少很多，開學第一個禮拜還在調整，不過之後會只有週一和週五有課，其他時間拿來做專題、助教和程式競賽。
+準備程式競賽的時間減少很多，開學第一個禮拜還在調整，不過之後會只有週一和週五有課，其他時間拿來做專題、助教和程式競賽。
+
+還有一個原因是因為我在用 vagrant 上面開 CMS 系統，用了兩三天後成功，之後有可能會用在某些地方。
