--- a/source/_posts/2020-Week-46-統一獅見面會.md
+++ b/source/_posts/2020-Week-46-統一獅見面會.md
@@ -10,3 +10,5 @@ tags:
 接著下來要改程式作業，我覺得這倒還好，只是開專案有點花時間，我一直在找有沒有工具可以比較方便用來開會，但是都找不到。
 
 這個禮拜令我高興的是參加統一獅的拍照會，一早就去百貨排隊，門一開的時候，就看到一大堆人衝去 7 樓，最後有搶到，順利拍到照，爽。
+
+原本以為今年沒比賽了，結果發現還有中區，又要準備比賽了。
