--- a/source/_posts/2021-Week-01-新的一年.md
+++ b/source/_posts/2021-Week-01-新的一年.md
@@ -5,8 +5,10 @@ date: 2021-01-04 23:35:35
 category: 週記
 tags:
 ---
-這週依舊在玩動物餐廳，還有準備期末考，最讓我感到不一樣的事，是要自己做研究寫論文，這是開始了碩士生涯了吧。下學期我想要簽 seminar 的課程，除了增加所學，也希望之後碩士班能夠抵掉這堂課。
+這週前面最大的事情，為一學期一度的 CPC 程式競賽，這次的我的名次為第四名，算是不錯，獎品 get!
 <!-- more -->
+這週依舊在玩動物餐廳，還有準備期末考，最讓我感到不一樣的事，是要自己做研究寫論文，這是開始了碩士生涯了吧。下學期我想要簽 seminar 的課程，除了增加所學，也希望之後碩士班能夠抵掉這堂課。
+
 之後開始要整理一些東西，包含一些想要寫的 blog 文章、上課筆記、程式競賽主題文章，還要處理寒訓。
 
 跨年我看 FOX 體育台，最後一天播放，謝謝他對台灣的付出。
