--- a/source/_posts/研究所推甄心得.md
+++ b/source/_posts/研究所推甄心得.md
@@ -9,6 +9,8 @@ tags:
 # 心得
 暑假開始找個學年度的推甄資料，找完以後想說要開始弄資料，結果都在忙競賽的實情，一開始鎖定的台成清交四間的資工系，不過後來成大的面試和 ICPC 撞期就放棄了。
 
+<!-- more -->
+
 到了 9 月底，剛上完暑訓後，要開始準備自傳時，發現只剩幾週可以準備，一開始我的自傳原本要寫成作文形式的，後來有人提議我可以用履歷方式，把我的競賽和其他成績列出來，改成這樣我覺得好寫多了，除了自傳，還有讀書計畫、以及其他有利的東西，讀書計畫我覺得就是一個大方向，除非有特別之處，否則還是要自傳和其他有利重要，其他有利我放了競賽證明外，我放了一些修課有做過的作品。總之兩個禮拜都在趕這些東西。
 
 再來就是報名系統，報名系統的整合度，清大>交大>台大，清大的作法是只要註冊一個帳號就可以報名多個系所，交大則是一個帳號一個系所，台大也是一個帳號一個系所，但台大不同於清大交大的地方是，他的報名、繳費、填資料，都是在不同地方，所以需要重複進行好幾次的操作，資工系的我感到頭痛。
