revise tag, title

--- a/source/_posts/TOPC-2020.md
+++ b/source/_posts/TOPC-2020.md
@@ -18,7 +18,7 @@ PB 也只是求兩區間的長度。
 
 後來看到 PC 有想法做出來 AC，我過了時候覺得有點猛。
 
-PE 是最小生成樹，我用 greedy 想法解出 AC。
+PE 是最小生成樹，我用 Greedy 想法解出 AC。
 
 最後差一點解出 PD，不然名次就很高了。
 
