--- a/source/_posts/2020-Week-05-交大營隊取消-QQ.md
+++ b/source/_posts/2020-Week-05-交大營隊取消-QQ.md
@@ -4,7 +4,7 @@ abbrlink: 426d
 date: 2020-02-02 21:53:52
 category: 週記
 tags:
-  - 寒訓
+  - PCCA
   - FJU Winter 2020
 ---
 這週這最讓我難過的事，是交大的營隊因武漢肺炎影響取消了，超失望的，要是在告訴我要好好準備校內寒訓，希望不要被迫取消(汗，還有取消訂房可以免押金。
