--- a/source/_posts/2020-Week-07-小小的突破.md
+++ b/source/_posts/2020-Week-07-小小的突破.md
@@ -5,7 +5,7 @@ date: 2020-02-16 23:25:30
 category: 週記
 tags:
   - FJU Winter 2020
-  - 畢業專題
+  - Project 畢業專題
 ---
 這週主要在準備輔大寒訓的東西，準備著自己要學到很多東西，了解要怎麼找最小割，還有 FFT 的 code，覺得當初想到 FFT 的人們太狂了。
 <!-- more -->
