--- a/source/_posts/POJ1664-放苹果.md
+++ b/source/_posts/POJ1664-放苹果.md
@@ -5,7 +5,7 @@ date: 2020-08-15 16:09:27
 category: POJ
 tags:
   - POJ
-  - 遞迴
+  - Recursive 遞迴
   - ICPC 亞洲訓練聯盟暑訓 2020
 ---
 [題目連結](http://poj.org/problem?id=1664)
