--- a/source/_posts/關於推甄的提醒.md
+++ b/source/_posts/關於推甄的提醒.md
@@ -6,6 +6,7 @@ category: 週記
 tags:
 ---
 之前一直想寫一篇，都忘記了，一直拖到現在。
+<!-- more -->
 * 選系所：研究所的單位不是科系、而是系所，一個大學科系在研究所會有對應多間系所，資工相關科系可以參考之前的文章，除了資工系外，許多理工相關科系也有資訊相關系所。
 * 準備自傳及相關資料：
     * 個人照：據說教授們會注重有沒有放照片，我在履歷、Github、Linkedin 都有放照片。
